unpackaged/main/default/objects/RFP_Initiation__c/RFP_Initiation__c.object-meta.xml
<CustomObject>
    <description>RFP Initiation Requests</description>
    <label>RFP Initiation</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>RFP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RFP Initiations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>