unpackaged/main/default/objects/RFP_Initiation__c/fields/AddNewFirmorContinue__c.field-meta.xml
<CustomField>
    <fullName>AddNewFirmorContinue__c</fullName>
    <label>AddNewFirmorContinue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add new Firm</fullName>
            </value>
            <value>
                <fullName>Continue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>