unpackaged/main/default/objects/RFP_Initiation__c/fields/Assumptions__c.field-meta.xml
<CustomField>
    <fullName>Assumptions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assumptions</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>