unpackaged/main/default/objects/RFP_Initiation__c/fields/Comments_Observations__c.field-meta.xml
<CustomField>
    <fullName>Comments_Observations__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments/Observations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>