unpackaged/main/default/objects/RFP_Initiation__c/fields/Count_of_Approved_Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Approved_Recommendations__c</fullName>
    <label>Count of Approved Recommendations</label>
    <summaryFilterItems>
        <field>Recommendation__c.Approved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Recommendation__c.RFP_Initiation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>