unpackaged/main/default/objects/RFP_Initiation__c/fields/Country_of_Firm__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Firm__c</fullName>
    <label>Country of Firm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>