unpackaged/main/default/objects/RFP_Initiation__c/fields/Create_Matter_formula__c.field-meta.xml
<CustomField>
    <fullName>Create_Matter_formula__c</fullName>
    <formula>AND (Recommendation_Count__c =  Count_of_Approved_Recommendations__c, 
 Recommendation_Count__c  &lt;&gt; 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Matter</label>
    <type>Checkbox</type>
</CustomField>