unpackaged/main/default/objects/RFP_Initiation__c/fields/Direct_Cost_Exception__c.field-meta.xml
<CustomField>
    <fullName>Direct_Cost_Exception__c</fullName>
    <label>Direct Cost Exception</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Direct_Hire_Cost_Estimate__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate Hiring Required</fullName>
            </value>
            <value>
                <fullName>New Projects with Existing Clients</fullName>
            </value>
            <value>
                <fullName>Joint Representation with Other Institutions Desirable</fullName>
            </value>
            <value>
                <fullName>Specialized Expertise Required</fullName>
            </value>
            <value>
                <fullName>Prequalified Counsel Selected</fullName>
            </value>
            <value>
                <fullName>Competitive Process not Practical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>