unpackaged/main/default/objects/RFP_Initiation__c/fields/Direct_Hire_Cost_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Direct_Hire_Cost_Estimate__c</fullName>
    <label>Direct Hire Cost Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Selection_Method__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated cost US$50,000 or less</fullName>
            </value>
            <value>
                <fullName>Estimated cost over US$50,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>