unpackaged/main/default/objects/RFP_Initiation__c/fields/Direct_Hire_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Direct_Hire_Exceptions__c</fullName>
    <label>Direct Hire Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estimated cost US$50,000 or less</fullName>
            </value>
            <value>
                <fullName>Immediate Hiring Required</fullName>
            </value>
            <value>
                <fullName>New Projects with Existing Clients</fullName>
            </value>
            <value>
                <fullName>Joint Representation with Other Institutions Desirable</fullName>
            </value>
            <value>
                <fullName>Specialized Expertise Required</fullName>
            </value>
            <value>
                <fullName>Prequalified Counsel Selected</fullName>
            </value>
            <value>
                <fullName>Competitive Process not Practical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>