unpackaged/main/default/objects/RFP_Initiation__c/fields/Estimated_amounts__c.field-meta.xml
<CustomField>
    <fullName>Estimated_amounts__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated amounts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>