unpackaged/main/default/objects/RFP_Initiation__c/fields/Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Exceptions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exceptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>