unpackaged/main/default/objects/RFP_Initiation__c/fields/Firms_to_be_Added__c.field-meta.xml
<CustomField>
    <fullName>Firms_to_be_Added__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Firms to be Added</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>