unpackaged/main/default/objects/RFP_Initiation__c/fields/Governing_Law__c.field-meta.xml
<CustomField>
    <fullName>Governing_Law__c</fullName>
    <label>Governing Law</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>