unpackaged/main/default/objects/RFP_Initiation__c/fields/Legal_Expense_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Legal_Expense_Responsibility__c</fullName>
    <label>Legal Expense Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment by GCL</fullName>
            </value>
            <value>
                <fullName>Payment by INO</fullName>
            </value>
            <value>
                <fullName>Payment by Client</fullName>
            </value>
            <value>
                <fullName>Payment by Advisory Services – Administered Funds</fullName>
            </value>
            <value>
                <fullName>Payment hybrid – IDB Invest</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
                <isActive>false</isActive>
                <label>Administrator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>