unpackaged/main/default/objects/RFP_Initiation__c/fields/Lookup_to_Maestro__c.field-meta.xml
<CustomField>
    <fullName>Lookup_to_Maestro__c</fullName>
    <label>Lookup to Maestro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transaction 1</fullName>
            </value>
            <value>
                <fullName>Transaction 2</fullName>
            </value>
            <value>
                <fullName>Transaction 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>