unpackaged/main/default/objects/RFP_Initiation__c/fields/Mandate_Letter_or_Term_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Letter_or_Term_Sheet__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mandate Letter or Term Sheet</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>