unpackaged/main/default/objects/RFP_Initiation__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>LegalStratusISV__Matter__c</referenceTo>
    <relationshipLabel>RFP Initiations</relationshipLabel>
    <relationshipName>RFP_Initiations</relationshipName>
    <type>Lookup</type>
</CustomField>