unpackaged/main/default/objects/RFP_Initiation__c/fields/Paralegal__c.field-meta.xml
<CustomField>
    <fullName>Paralegal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the IDB Invest paralegal responsible for this RFP</inlineHelpText>
    <label>Paralegal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>IDB Invest Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFP Initiations</relationshipLabel>
    <relationshipName>RFP_Initiations</relationshipName>
    <type>Lookup</type>
</CustomField>