unpackaged/main/default/objects/RFP_Initiation__c/fields/Project_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Project_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Attorney</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>IDB Invest Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RFP Initiations (Project Attorney)</relationshipLabel>
    <relationshipName>RFP_Initiations1</relationshipName>
    <type>Lookup</type>
</CustomField>