unpackaged/main/default/objects/RFP_Initiation__c/fields/Recommendation_Count__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Count__c</fullName>
    <label>Count of Recommendations</label>
    <summaryForeignKey>Recommendation__c.RFP_Initiation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>