unpackaged/main/default/objects/RFP_Initiation__c/fields/Response_Due__c.field-meta.xml
<CustomField>
    <fullName>Response_Due__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date the RFP is due</inlineHelpText>
    <label>Response Due</label>
    <type>Date</type>
</CustomField>