unpackaged/main/default/objects/RFP_Initiation__c/fields/Responsible_for_Legal_Expenses_Other__c.field-meta.xml
<CustomField>
    <fullName>Responsible_for_Legal_Expenses_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible for Legal Expenses (Other)</label>
    <type>TextArea</type>
</CustomField>