unpackaged/main/default/objects/RFP_Initiation__c/fields/RFP_Initiation_Account_Names__c.field-meta.xml
<CustomField>
    <fullName>RFP_Initiation_Account_Names__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RFP Initiation Account Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>