unpackaged/main/default/objects/RFP_Initiation__c/fields/Scope_of_Work__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_Work__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope of Work</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>