unpackaged/main/default/objects/RFP_Initiation__c/fields/Selection_Method__c.field-meta.xml
<CustomField>
    <fullName>Selection_Method__c</fullName>
    <label>Selection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Hiring</fullName>
            </value>
            <value>
                <fullName>Competitive Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>