unpackaged/main/default/objects/RFP_Initiation__c/fields/Skip_Competitive_RFP_Process__c.field-meta.xml
<CustomField>
    <fullName>Skip_Competitive_RFP_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Competitive RFP Process</label>
    <type>Checkbox</type>
</CustomField>