unpackaged/main/default/objects/RFP_Initiation__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Capital Market</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Funds</fullName>
            </value>
            <value>
                <fullName>General Legal Issues</fullName>
            </value>
            <value>
                <fullName>IDB Lab</fullName>
            </value>
            <value>
                <fullName>Project Finance</fullName>
            </value>
            <value>
                <fullName>Structured Finance</fullName>
            </value>
            <value>
                <fullName>Supply Chain Financing</fullName>
            </value>
            <value>
                <fullName>TFFP</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
            <value>
                <fullName>Model Forms</fullName>
            </value>
            <value>
                <fullName>Mobilization</fullName>
            </value>
            <value>
                <fullName>Other Institutional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>