unpackaged/main/default/objects/RFP_Initiation__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RFP Initiations</relationshipLabel>
    <relationshipName>RFP_Initiations</relationshipName>
    <type>Lookup</type>
</CustomField>