unpackaged/main/default/objects/RFP_Initiation__c/fields/Transaction_Country__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Country__c</fullName>
    <label>Transaction Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>