unpackaged/main/default/objects/RFP_Initiation__c/fields/Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction / Matter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>