unpackaged/main/default/objects/RFP_Initiation__c/fields/Transaction_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>