unpackaged/main/default/objects/RFP_Initiation__c/fields/Transaction_Phase__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Phase__c</fullName>
    <label>Transaction Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-closing</fullName>
            </value>
            <value>
                <fullName>Post-closing</fullName>
            </value>
            <value>
                <fullName>Workout</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>dsfsdf</fullName>
                <isActive>false</isActive>
                <label>dsfsdf</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>