unpackaged/main/default/objects/RFP_Initiation__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Funds</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>MIF Equity</fullName>
            </value>
            <value>
                <fullName>MIF Lending</fullName>
            </value>
            <value>
                <fullName>Mobilization</fullName>
            </value>
            <value>
                <fullName>Model Forms</fullName>
            </value>
            <value>
                <fullName>Project Finance</fullName>
            </value>
            <value>
                <fullName>Structure Finance</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>TFFP</fullName>
            </value>
            <value>
                <fullName>Treasury</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>