unpackaged/main/default/objects/RFP_Initiation__c/listViews/My_RFP_Initiations.listView-meta.xml
<ListView>
    <fullName>My_RFP_Initiations</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Name__c</columns>
    <columns>Transaction_Phase__c</columns>
    <columns>Legal_Expense_Responsibility__c</columns>
    <columns>Governing_Law__c</columns>
    <columns>Matter__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>My RFP Initiations</label>
</ListView>